--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
     <script type="module" src="/build/stencil-web-comps.esm.js"></script>
     <script nomodule src="/build/stencil-web-comps.js"></script>
     <style>
+        html {
+            --color-primary: #3b013b;
+        }
+
         body {
             font-family: sans-serif;
         }
